# IGH-Projects

./: README.md
EtherCAT/: CMakeLists.txt  EL2889.c  EL2889.h  EtherCAT_Demo  EtherCAT_Demo_V0.2.c  EtherCAT_Master.h
EtherCAT_3rd_Arm/: Elmo.cpp  Elmo.h  EtherCAT.cpp  EtherCAT_Demo.cpp  EtherCAT_Global.h  EtherCAT_Master.h  SetPREOP.sh
EtherCAT_3rd_Leg/: Elmo.cpp  Elmo.h  EtherCAT.cpp  EtherCAT.h  EtherCAT_Demo  EtherCAT_Global.h  SharedMemory.cpp  SharedMemoryDataType.hpp  test.cpp
EtherCAT_CXX_Backhoff_EL2889_No_Thread/: CMakeLists.txt  EtherCAT_Demo  EtherCAT_Demo.cpp  EtherCAT_Master.h
EtherCAT_CXX_Backhoff_EL2889_Thread/: CMakeLists.txt  EL2889.cpp  EL2889.h  EtherCAT_Demo  EtherCAT_Demo.cpp  EtherCAT_Master.cpp  EtherCAT_Slave.h
EtherCAT_CXX_Backhoff_EL3102/: CMakeLists.txt  EL2889.c  EL2889.h  EL3102.c  EL3102.h  EtherCAT_Demo  EtherCAT_Demo_V0.2.c  EtherCAT_Master.c
EtherCAT_CXX_Backhoff_EL3102/history/: EtherCAT_Demo_V0.1.c
EtherCAT_CXX_HC/: CMakeLists.txt  EL2889.h  EtherCAT_Global.h  EtherCAT_Master.cpp  EtherCAT_Master.h  HC_SV660N.cpp  HC_SV660N.h
EtherCAT_CXX_HC_SHM/: CMakeLists.txt  EtherCAT.cpp  EtherCAT.h  EtherCAT_Demo_HC.cpp  EtherCAT_Master.h  EtherCAT_Slave.h  HC_SV660N.cpp  HC_SV660N.h  sharedDataType.h  sharedMemory.cpp  sharedMemory.h
EtherCAT_CXX_HC_V0.0/: EL2889.cpp  EL2889.h  EtherCAT_Demo  EtherCAT_Demo_HC.cpp  EtherCAT_Master.cpp  EtherCAT_Master.h  EtherCAT_Slave.h  HC_SV660N.cpp  HC_SV660N.h
EtherCAT_Elmo/: Elmo.cpp  Elmo.h  EtherCAT_Demo  EtherCAT_Demo.cpp  EtherCAT_Global.h  EtherCAT_Slave.h  HC_SV660N.h  SharedMemory.cpp  SharedMemory.hpp
EtherCAT_Elmo_Base_Thread/: CMakeLists.txt  EL2889.h  Elmo.cpp  Elmo.h  EtherCAT_Demo  EtherCAT_Demo.cpp  EtherCAT_Global.h  HC_SV660N.cpp  ideas.md
EtherCAT_Elmo_Base_Thread/history/: EtherCAT.cpp
EtherCAT_Elmo_Base_Without_Thread/: Elmo.cpp  EtherCAT_Demo  HC_SV660N.cpp  (+3 more)
Process_SHM_Demo/: CMakeLists.txt  temp  temp.cpp  temp2  temp2.cpp
(+34 files in other folders)
