cmake_minimum_required(VERSION 3.10)
project(Demo)
# set(SRC EtherCAT_Demo.c)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SRC)
set(CMAKE_BUILD_TYPE debug)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR})
set(CMAKE_CXX_STANDARD 11)
link_directories(/opt/etherlab/lib)
add_executable(EtherCAT_Demo ${SRC})
target_link_libraries(EtherCAT_Demo ethercat pthread)