cmake_minimum_required(VERSION 3.10)
project(Demo)
# set(SRC EtherCAT_Demo.c)
# aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SRC)
file(GLOB SRC_LIST "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
set(CMAKE_BUILD_TYPE Debug)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR})
# set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/lib)
set(CMAKE_CXX_STANDARD 11)
link_directories(/opt/etherlab/lib)
add_executable(EtherCAT_Demo ${SRC_LIST})
target_link_libraries(EtherCAT_Demo ethercat pthread)
# add_library(EtherCAT SHARED ${SRC_LIST})
# target_link_libraries(EtherCAT ethercat)